tests/paczka1/fuzzy1/64871884.err
Error in line 10: 5rc S38 57,0
Error in line 23: hapA2hK S125 0,6
Error in line 27: S502 S502 72,3
Error in line 35: NOFEHZ4L2Z A547 52,3
Error in line 36: NOFEHZ4L2Z S125 8,3
